# evergreen

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  action.yml  auth.py  dependabot_file.py  env.py  evergreen.py  exceptions.py  pyproject.toml  requirements-test.txt  requirements.txt  summary.md  test_auth.py  test_cooldown.py  test_dependabot_file.py  test_env.py  test_env_get_bool.py  test_evergreen.py  test_exceptions.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/chainguard/: update-uv-lock.sts.yaml
.github/workflows/: contributors_report.yaml  copilot-setup-steps.yml  docker-ci.yml  python-ci.yml  release.yml  super-linter.yaml  update-uv-lock.yml
