[project]
name = "evergreen"
version = "1.0.0"
description = "GitHub Action that enables Dependabot for all repositories in a GitHub organization."
requires-python = ">=3.11"
dependencies = [
    "PyGithub>=2.6.0",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "ruamel-yaml==0.19.1",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==2.1.0",
    "mypy-extensions==1.1.0",
    "pylint==4.0.6",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "types-PyYAML==6.0.12.20250915",
    "types-requests==2.33.0.20260518",
]
